Restore klineedit behavior as before kdelibs commit 2ea274cd. Fixed khtml form regression where choosing an item in completion box by pressing Enter key immediately submits the form instead of just filling the input text field.

BUG: 277943
FIXED-IN: 4.7.1